k8s/web-prod/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoas-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thoas-server
  template:
    metadata:
      labels:
        app: thoas-server
    spec:
      imagePullSecrets:
        - name: ensemblweb-pull-secret 
      containers:
        - name: thoas-server
          image: DOCKER_IMAGE
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          command: ["uvicorn"]
          args: [
            "--host",
            "0.0.0.0",
            "--port",
            "8000",
            "--worker",
            "4",
            "graphql_service.server:APP"
          ]
