k8s/web-prod/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-core-svc
  labels:
    app: graphql-core-svc
spec:
  selector:
    app: graphql-core
  type: ClusterIP
  ports:
    - name: graphql-core
      port: 8000
      protocol: TCP
      targetPort: 8000
