k8s/web-prod/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-core-ingress
  annotations:
    # Required for capture groups used by rewrite-target.
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: hostname
    http:
      paths:
      - backend:
          service:
            name: graphql-core-svc
            port:
              number: 8000
        # Overlay replaces `path`; capture group 2 is rewritten to app root.
        path: path(/|$)(.*)
        pathType: ImplementationSpecific
